hard-gists/b8240ea53d22e1bb4d32/run.log
=== Docker Run Log for b8240ea53d22e1bb4d32 ===
Started at: Mi 29. Okt 19:31:49 CET 2025

[2025-10-29 19:31:50] START: Running container for b8240ea53d22e1bb4d32
[2025-10-29 19:31:50] SUCCESS: Container b6698e1d1d3983bd38fae1137c29e9b595e897f5e79374af27b7d365ae39c876 started for b8240ea53d22e1bb4d32
=== Container logs for b8240ea53d22e1bb4d32 ===
  File "/snippet.py", line 44
    print 'precision:{0:.3f}'.format(m_precision)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b8240ea53d22e1bb4d32 ===
[2025-10-29 19:31:52] INFO: Container b6698e1d1d3983bd38fae1137c29e9b595e897f5e79374af27b7d365ae39c876 has stopped
